# API

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml
migrations/01_create_tables/: down.sql  up.sql
src/: admin_session.rs  api_error.rs  api_response.rs  db.rs  dbmodels.rs  dbschema.rs  lib.rs  main.rs  response_data.rs  schema.rs  session.rs
src/api/: account_get.rs  account_post.rs  account_put.rs  assignment_attendance_get.rs  assignment_attendance_post.rs  assignment_delete.rs  assignment_get.rs  assignment_put.rs  assignment_solution_get.rs  assignment_solution_post.rs  assignments_get.rs  assignments_post.rs  auth.rs  auth_delete.rs  auth_microsoft.rs  auth_post.rs  endpoint_response.rs  enrolled.rs  get_solutions.rs  idk.rs  mod.rs  not_enrolled.rs  role_delete.rs  role_users_get.rs  roles_get.rs  roles_post.rs  subject_get.rs  subject_put.rs  subject_role_delete.rs  subject_role_post.rs  subject_roles_get.rs  subject_solutions_get.rs  subject_student_assignments_get.rs  subject_teachers_get.rs  subjects_delete.rs  subjects_get.rs  subjects_post.rs  user_role_delete.rs  user_role_post.rs  user_roles_get.rs  (+1 more)
src/api/roles/: mod.rs  roles.rs
src/api/users/: login.rs  mod.rs
