[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.10", features = ["sqlite", "uuid"] }
enum-assoc = "1.2.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = "=1.0.0-alpha.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["chrono"] }
tokio = "1.45.0"
tokio-stream = "0.1.17"
uuid = "1.17.0"
