[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.10", features = ["chrono", "r2d2", "serde_json", "sqlite", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
enum-assoc = "1.2.4"
jsonwebtoken = "9"
okapi = { version = "0.7.0", features = ["impl_json_schema"] }
paste = "1.0.15"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.9.0", features = ["swagger", "uuid", "rocket_sync_db_pools", "rapidoc", "rocket_db_pools", "rocket_dyn_templates"] }
rocket_okapi_codegen = "0.9.0"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["chrono"] }
thiserror = "2.0.12"
tokio = "1.45.0"
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["v4", "v8"] }
